--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build WAR
+name: Build and Deploy WAR
 
 on:
   push:
@@ -19,11 +19,11 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Build with Maven
+      - name: Build WAR
         run: mvn clean package
 
-      - name: Upload WAR File
-        uses: actions/upload-artifact@v4
-        with:
-          name: war-file
-          path: target/*.war
+      - name: Deploy to Tomcat
+        run: |
+          curl -v -u ${{ secrets.TOMCAT_USERNAME }}:${{ secrets.TOMCAT_PASSWORD }} \
+          --upload-file target/cicd-demo.war \
+          "${{ secrets.TOMCAT_URL }}/manager/text/deploy?path=/cicd-demo&update=true"
